# cmake-cv-template

./: CMakeLists.txt
cmake/: find_opencv.cmake
source/: CMakeLists.txt  main.cpp
